--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,12 @@
-*.log
-.idea/
 target/
-logs
-project/project
-project/target
-target
-tmp
-.history
-dist
-/.idea
-/*.iml
-/out
-/.idea_modules
-/.classpath
-/.project
-/RUNNING_PID
-/.settings
-/project/*-shim.sbt
-/activator-sbt-*-shim.sbt
 
+# vim
+*.sw?
 
+# Ignore [ce]tags files
+tags
+.idea
+benchmarks/results
+.java-version
+.DS_Store
+.metals
